; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/spufs/extr_spu_save.c_enqueue_sync.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/spufs/extr_spu_save.c_enqueue_sync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MFC_TagID = common dso_local global i32 0, align 4
@MFC_Cmd = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @enqueue_sync to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enqueue_sync(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  store i32 204, i32* %4, align 4
  %5 = load i32, i32* @MFC_TagID, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @spu_writech(i32 %5, i32 %6)
  %8 = load i32, i32* @MFC_Cmd, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @spu_writech(i32 %8, i32 %9)
  ret void
}

declare dso_local i32 @spu_writech(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
